styles.css
/* ... */
.map-card:focus {
    outline: 1px solid black;
}

.index-map-text {
    flex: 2;
    align-self: center;
    min-width: 30ch;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 0.5rem 1.5rem 1.5rem 1.5rem;
    font-size: calc(0.8rem + 0.6vw);
}

.map-text-bottom {
    font-size: 1rem;
    font-style: italic;
}

.index-map-img {
    border-radius: 2px;
    width: 100%;
    aspect-ratio: 16 / 9;
    display: block;
}

.map-card-item-img {
    width: calc(100% - calc(3rem + 2vw));
    scroll-margin-bottom: 50vh;
    aspect-ratio: 16 / 9;
    max-height: 80vh;
    margin-bottom: 1.5rem;
    border-radius: 5px;
}

.item-img {
    min-height: 20vh;
    max-height: 45vh;
    border-radius: 10px;
    flex-grow: 1;
}

.card-info {
    background-color: #F2F2F2;
    padding: 0.8rem;
    border-radius: 10px;
    margin-top: auto;
}

.name-and-icon {
    display: flex;
    justify-content: space-between;
}

.item-name {
    font-size: calc(1rem + 0.2vw);
}

.item-name:hover {
    cursor: pointer;
    text-decoration: underline;
}

.heart-icon {
    width: 1.5rem;
    height: 1.5rem;
    flex-shrink: 0;
    background: none;
    border: none;
    transition: .2s ease-in-out 0s;
}

.heart-icon:hover {
    cursor: pointer;
    transform: scale(1.1);
}

.item-tags-group {
    display: flex;
    gap: 0.5rem;
    margin-top: 0.5rem;
}

.item-tag {
    background-color: #C3D5F0;
    border: none;
    border-radius: 6px;
    font-size: calc(0.5rem + 0.1vw);
    padding: 0.3rem 0.7rem;
    text-align: center;
    transition: .2s ease-in-out 0s;
    box-shadow: 1.5px 1.5px #949596;
}

.item-tag:hover {
    cursor: pointer;
    transform: scale(1.1);
}

.arrow-see-all-container {
    display: flex;
    align-items: center;
    padding-right: calc(1.5rem + 1vw);
    margin-left: 0.5rem;
}

.arrow-see-all {
    width: 1.8rem;
    transition: .2s ease-in-out 0s;
}

.arrow-see-all:hover {
    transform: scale(1.1);
}

/* footer starts */

footer {
    position: relative;
    display: flex;
    justify-content: space-between;
    margin: 3rem calc(1.5rem + 1vw) 2rem calc(1.5rem + 1vw);
}

.footer-links-group {
    display: flex;
    gap: 1rem;
}

/* figure out smooth scroll and link animations */
.footer-links-group>p {
    font-size: calc(0.8rem + 0.2vw);
}

.footer-links-group>p:hover {
    /* text-decoration: 4px solid #C3D5F0 underline; */
    text-decoration-thickness: 4px;
    text-decoration-style: solid;
    text-decoration-line: underline;
    text-decoration-color: #C3D5F0;
}

.arrow-up {
    width: calc(2rem + 0.5vw);
    transition: .2s ease-in-out 0s;
}

.arrow-up:hover {
    transform: scale(1.1);
}

/* for the about page */

.about-main {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    width: calc(100% - calc(3rem + 2vw));
    gap: 2rem;
}

.about-item-img {
    width: 100%;
    height: 100%;
    min-height: 100%;
    max-height: 400px;
    border-radius: 10px;
}

.about-text {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.about-h2:not(:first-child) {
    margin-top: 1rem;
}

.underlined {
    /* text-decoration: 4px solid #C3D5F0 underline; */
    text-decoration-thickness: 4px;
    text-decoration-style: solid;
    text-decoration-line: underline;
    text-decoration-color: #C3D5F0;
    margin-bottom: -0.5rem;
}

.text-link {
    text-decoration: underline;
}

/* for sign-in and register pages */

.sign-in-register-main {
    height: calc(100vh - 14rem);
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.sign-in-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 67%;
}

.sign-in-form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
    align-items: start;
}

.sign-in-input-fields {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.input-fields {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
}

.label-and-input {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    gap: 0.5rem;
    margin-right: 0.5rem;
    margin-left: 0.5rem;
}

.username-input,
.password-input,
.email-input,
.password-repeat {
    border-radius: 15px;
    border: 1px solid black;
    height: 2.5rem;
    min-width: 28ch;
    font-size: calc(1rem + 0.5vw);
    padding-left: 1rem;
    margin-bottom: 0.8rem;
}

.username-input:focus,
.username-input:active,
.password-input:focus,
.password-input:active,
.email-input:focus,
.email-input:active,
.password-repeat:focus,
.password-repeat:active {
    outline: none;
}

.sign-in-buttons {
    display: flex;
    gap: 1rem;
    margin-right: 0.5rem;
    margin-left: 0.5rem;
}

.sign-in-form .sign-in-btn,
.register-btn {
    width: max-content;
    padding: 0.5rem 1.5rem;
    border: none;
    border-radius: 15px;
    font-size: 1.2rem;
    font-weight: bold;
    box-shadow: 3px 3px #949596;
}

.register-btn {
    background-color: #F2F2F2;
    transition: .2s ease-in-out 0s;
}

.register-btn:hover {
    transform: scale(1.03);
}

.coming-soon-text {
    font-size: calc(0.6rem + 0.2vw);
    height: 0;
    margin: 1rem 0;
}

/* for studio map page + lineup pages */

.map-main {
    align-items: center;
}

.map-main>h1,
.lineup-top>h1 {
    margin-bottom: 1.5rem;
}

.lineup-main .search-bar {
    width: min(80vw, 500px);
    margin-bottom: 1rem;
}

.lineup-search-items {
    margin-bottom: 1.5rem;
}

.lineup-main .search-icon,
.map-main .search-icon {
    display: none;
    height: auto;
    width: 1.8rem;
    margin-top: -1rem;
    background: none;
    border: none;
}

.lineup-main, .not-modal {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.disabled-click-hover {
    pointer-events: none;
    user-select: none;
}
/* ... */

